--- a/csvedit.css
+++ b/csvedit.css
@@ -34,6 +34,8 @@ th, td {
 
 th {
   background-color: whitesmoke;
+  position: sticky;
+  top: 0;
 }
 
 .number {
@@ -41,6 +43,8 @@ th {
   text-align: right;
   padding-right: 8px;
   background-color: whitesmoke;
+  position: sticky;
+  left: 0;
 }
 
 th input, td input {
